# Robot

./: BatterySupport.SLDPRT  CMakeLists.txt  README.md
Arduino/arduino_les_deux/: arduino_les_deux.ino
Arduino/arduino_ros/: arduino_ros.ino
Arduino/arduino_ros_encoders/: arduino_ros_encoders.ino
Arduino/arduino_ros_encoders2/: arduino_ros_encoders2.ino
Arduino/arduino_ros_only_encoders/: arduino_ros_only_encoders.ino
Design 3D/: BatterySupport2.SLDPRT  Bcuk.SLDPRT  Capteur-thermique-v5.stl  Pi-camera-support-v3.stl
launch/: amcl_demo.launch  bouger.launch  file_rpi.launch  hector.launch  move_base.launch  navigation.launch  pat_configuration.launch  test.launch
params/: controllers.yaml  costmap_common_params.yaml  local_costmap_params.yaml  pat.urdf.xacro
